Fixing typo and duplication error

--- a/infra/helmchart/values-dev.yaml
+++ b/infra/helmchart/values-dev.yaml
@@ -104,7 +104,7 @@ podDisruptionBudget:
 volumes: []
 volumeMounts: []
 nodeSelector: {}
-tolerances: []
+tolerations: []
 affinity: {}
 
 # ===========================
