--- a/infra/helmchart/values-prod.yaml
+++ b/infra/helmchart/values-prod.yaml
@@ -149,9 +149,9 @@ backup:
 
 # Additional volumes and mounts
 volumes: []
-volumesMounts: []
+volumeMounts: []
 nodeSelector: {}
-tolerances: []
+tolerations: []
 affinity: {}
 
 # ===========================
