--- a/infra/helmchart/values-staging.yaml
+++ b/infra/helmchart/values-staging.yaml
@@ -125,7 +125,7 @@ podSecurityStandards:
 volumes: []
 volumeMounts: []
 nodeSelector: {}
-tolerances: []
+tolerations: []
 affinity: {}
 
 # ===========================
